# ccodex

./: .ccodex_secret_patterns.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.toml  main.py  pyproject.toml  requirements.txt  suggestions.md
.github/workflows/: ci.yml
engine/: __main__.py  chat.py  client.py  commands.py  config.py  history.py  main.py  project.py  prompting.py
engine/prompts/: system.md
sprints/: v0.4.md  v0.5.md  v0.6.md  v0.7.md
tests/: test_history.py  test_project_scan.py  test_read.py  test_session.py  test_write_command.py
