[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccodex"
version = "0.2.0"
description = "A transparent, hackable local CLI coding assistant."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
ccodex = "engine.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]


